@@ -49,8 +49,8 @@ public:
    };
    int mode;
 
-   char *pat;
-   char *time_fmt;
+   xstring_c pat;
+   xstring_c time_fmt;
 
    bool basenames;
    bool showdots;
@@ -68,14 +68,11 @@ public:
 
    FileSet::sort_e sort;
    FileSetOutput(): classify(0), width(0), color(false), mode(NONE),
-      pat(NULL), time_fmt(0), basenames(false), showdots(false),
+      basenames(false), showdots(false),
       quiet(false), patterns_casefold(false), sort_casefold(false), sort_reverse(false),
       sort_dirs_first(false), size_filesonly(false), single_column(false),
       list_directories(false), need_exact_time(false), output_block_size(0),
       human_opts(0), sort(FileSet::BYNAME) { }
-   ~FileSetOutput() { xfree(pat); xfree(time_fmt); }
-   FileSetOutput(const FileSetOutput &cp);
-   const FileSetOutput &operator = (const FileSetOutput &cp);
 
    void long_list();
    void config(const OutputJob *fd);
@@ -90,10 +87,11 @@ public:
 class clsJob : public SessionJob
 {
    OutputJob *output;
-   FileSetOutput fso;
+   FileSetOutput *fso;
    ArgV *args;
    ListInfo *list_info;
-   char *dir, *mask;
+   xstring_c dir;
+   xstring_c mask;
    bool done;
    bool use_cache;
 
@@ -103,7 +101,7 @@ class clsJob : public SessionJob
    enum { INIT, START_LISTING, GETTING_LIST_INFO, DONE } state;
 
 public:
-   clsJob(FA *s, ArgV *a, const FileSetOutput &_opts, OutputJob *output);
+   clsJob(FA *s, ArgV *a, FileSetOutput *_opts, OutputJob *output);
    ~clsJob();
    int Done();
    int Do();
